# Image-Upscaler

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
CNN/: CNN.py  SRCNN.py  SRDataset.py  best_srcnn.pth  export_onnx.py  train_cnn.py
Image Upscaler/: CMakeLists.txt  Image Upscaler.cpp  Image Upscaler.h
Image Upscaler/core/: Image.cpp  Image.h  Scaler.cpp  Scaler.h
Image Upscaler/interpolation/: Bicubic.cpp  Bicubic.h  Bilinear.cpp  Bilinear.h  IInterpolator.h
Image Upscaler/metrics/: Metrics.cpp  Metrics.h
Image Upscaler/srcnn/: SRCNNUpscaler.cpp  SRCNNUpscaler.h
models/onnx/: srcnn.onnx  srcnn.onnx.data  srcnn_v1.onnx  srcnn_v1.onnx.data  srcnn_v2.onnx  srcnn_v3.onnx  srcnn_v4.onnx  srcnn_v5.onnx
models/pth/: best_srcnn.pth
